src/objects/FAQ_Category__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>The order in which the FAQ categories are listed. Lower numbers go first.</inlineHelpText>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dementia Friends</fullName>
                </value>
                <value>
                    <fullName>Cupcake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FAQ Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cupcakes</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Website__c</field>
            <operation>equals</operation>
            <value>Cupcake</value>
        </filters>
        <label>Cupcakes</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friends</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Website__c</field>
            <operation>equals</operation>
            <value>Dementia Friends</value>
        </filters>
        <label>Dementia Friends</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>FAQ Category List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Categorys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>